git commit -m "Lançamento da primeira versão do HTML"

--- a/pages/branches.html
+++ b/pages/branches.html
@@ -45,6 +45,7 @@
     <main>
         <article>
             <h1>Branches</h1>
+            <img class="logotipos-explicacao" src="../images/Branch/Figura1_Branch.png" alt="Figura de Branch">
             <p>
                 Uma ramificação no Git é um ponteiro para as alterações feitas nos arquivos do projeto. É útil
                 em situações nas quais você deseja adicionar um novo recurso ou corrigir um erro, gerando
