--- a/pages/gitpull.html
+++ b/pages/gitpull.html
@@ -45,6 +45,7 @@
     <main>
         <article>
             <h1>Git Pull</h1>
+            <img class="logotipos-explicacao" src="../images/GitPull/Figura1_GitPull.png" alt="Figura de Git Pull">
             <p>
                 Para que você envie suas alterações para a origem você precisa antes verificar se o repositório
                 remoto sofreu alterações de outras pessoas desde que você começou a trabalhar naquela
