git commit -m "Correção de Imagem do Exemplo de Colaboração com Git"

--- a/pages/exemplo.html
+++ b/pages/exemplo.html
@@ -45,7 +45,8 @@
     <main>
         <article>
             <h1>Exemplo de Colaboração com Git</h1>
-            <img class="logotipos-explicacao" src="../images/Exemplo/Figura1_Exemplo.png" alt="Figura de colaboração Git">
+            <img class="logotipos-explicacao exemplo-pe" src="../images/Exemplo/Figura1_Exemplo.png" alt="Figura de colaboração Git">
+            <img class="logotipos-explicacao exemplo-deitado" src="../images/Exemplo/Figura2_Exemplo.png" alt="Figura de colaboração Git">
             <p>
                 O Git é uma das melhores ferramentas para se trabalhar em projetos em equipe,
                 com várias ferramentas de análise, criação de repertórios, rastreabilidade de erros,
