git commit -m "Adição de um arquivo README e correção de ortografia"

--- a/pages/configuracao.html
+++ b/pages/configuracao.html
@@ -129,7 +129,7 @@
                                 --list
                             </code>
                         </div>
-                        é a lista de configuraçãoes.
+                        é a lista de configurações.
                     </p>
                 </li>
             </ul>
