--- a/pages/errosdecommit.html
+++ b/pages/errosdecommit.html
@@ -46,7 +46,7 @@
         <article>
             <h1>Erros de Commit</h1>
             <p>
-                Aqui informará como <b>corrigir</b> uma mensagem errada em um commit
+                Aqui informará como <b>corrigir</b> uma mensagem errada em um commit.
             </p>
             <ol>
                 <h2><li>Editar o último commit local (ANTES DO PUSH):</li></h2>
@@ -177,7 +177,7 @@
                 <h2><li>Alterar os commits (DEPOIS DO PUSH):</li></h2>
                 <p>
                     Antes de mais nada, isso é <b class="danger">altamente não recomendado</b>.
-                    Isso pode quebrar o respositório.
+                    Isso pode quebrar o repositório.
                 </p>
                 <p>
                     Para alterar o histórico depois do push, basta seguir um dos passos acima e depois executar:
