git commit -m "Correção de ortografia no verticla-nav"

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="pages/git.html"><li>Git</li></a>
             <a href="pages/github.html"><li>GitHub</li></a>
             <ul class="categoria">
-                <a href="pages/contaGitHub.html"><li>Criar conta no GitHub</li></a>
+                <a href="pages/contaGitHub.html"><li>Criar Conta no GitHub</li></a>
             </ul>
             <a href="pages/gitlab.html"><li>GitLab</li></a>
             <a href="pages/instalacao.html"><li>Instalação</li></a>
