--- a/pages/branches.html
+++ b/pages/branches.html
@@ -24,7 +24,7 @@
             <a href="git.html"><li>Git</li></a>
             <a href="github.html"><li>GitHub</li></a>
             <ul class="categoria">
-                <a href="contaGitHub.html"><li>Criar conta no GitHub</li></a>
+                <a href="contaGitHub.html"><li>Criar Conta no GitHub</li></a>
             </ul>
             <a href="gitlab.html"><li>GitLab</li></a>
             <a href="instalacao.html"><li>Instalação</li></a>
