git commit -m "Correção de ortografia no index.html"

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <p>
                     Neste sistema, os desenvolvedores podem obter a versão mais recente e duplicar localmente 
                     o repositório completo. Assim, caso um dos servidores cair, e esses sistemas estiverem 
-                    conectados por meio dele, qualquer um dos repositórios dos programadroes podem ser copiados
+                    conectados por meio dele, qualquer um dos repositórios dos programadores podem ser copiados
                     de volta para o servidor para restaurá-lo. Cada clonagem feita do projeto é backup completo dos dados.
                 </p>
                 <img src="images/ControleDeVersao/ControleDeVersao - Figura2.png" alt="Imagem ilustrativa do controle de versões dos projetos no servidor">
