Alteração de texto

--- a/pages/instalacaoWindows.html
+++ b/pages/instalacaoWindows.html
@@ -46,7 +46,8 @@
         <article>
             <h1>Instalação no Windows</h1>
             <p>
-                Nesta página, você aprenderá a fazer a <b>instalação do Git</b> no <b>Windows</b> por etapas:
+                Nesta página, você aprenderá a fazer a <b>instalação do Git</b> no <b>Windows</b> por etapas e já adiantamos instalar o GIT no Windows é tão simples como baixar um instalador e executá-lo. Execute os seguintes passos
+                
             </p>
             <ol>
                 <h2><li>Acesse o site <a href="https://gitforwindows.org/" target="_blank" rel="noopener noreferrer">Git for Windows.</a></li></h2>
@@ -64,6 +65,7 @@
                 Diferente da instalação do Git no Linux, no Windows é por meio de um arquivo executável instalador.
                 Agora desfrute seus projetos com o Git!
             </p>
+            <p> E vale ressaltar que anteriormente no site gitforwindows.org era necessario escolher qual versão do windows era a sua maquina (32bits/64bits) no momento dá publicação deste site está opção não está sendo mais usada agora já baixa a versão necessaria. </p>
         </article>
     </main>
     <footer>
