--- a/pages/instalacaoLinux.html
+++ b/pages/instalacaoLinux.html
@@ -44,7 +44,7 @@
     </nav>
     <main>
         <article>
-            <h1>Instalação no Linux</h1>
+            <h1>Instalação do GIT no Linux</h1>
             <p>
                 Nesta página, você aprenderá a fazer a <b>instalação do Git</b> no <b>Linux</b> por etapas:
             </p>
@@ -69,12 +69,12 @@
                         </code>
                     </div>
                 </ul>
-                <h2><li>Caso precise ver a versão do Git:</li></h2>
+                <h2><li>Caso precise verificar a versão do Git:</li></h2>
                 <div class="codigo">
                     <code>
                         $ git --version
                     </code>
-                </div>
+                </div> 
                 <p>
                     O <b>sudo</b> permite que o usuário faça alterações como outro usuário, 
                     em geral como um superusuário (root).
@@ -84,7 +84,7 @@
                     atualizações e de novos arquivos.
                 </p>
             </ol>
-            <h2>Pronto! O Git foi instalado no Linux!</h2>
+            <h2>Pronto! O Git foi instalado no Linux com Sucesso!</h2>
             <p>
                 Diferente da instalação do Git no Windows, no Linux é por meio de comandos no terminal.
                 Agora desfrute seus projetos com o Git!
