--- a/pages/instalacaoWindows.html
+++ b/pages/instalacaoWindows.html
@@ -30,7 +30,7 @@
             <a href="instalacao.html"><li>Instalação</li></a>
             <ul class="categoria">
                 <a href="instalacaoLinux.html"><li>Instalação no Linux</li></a>
-                <a href="instalacaoWindows.html"><li>Instalação no Windows</li></a>
+                <a href="instalacaoWindows.html"><li>Instalação do git no Windows</li></a>
             </ul>
             <a href="configuracao.html"><li>Configuração</li></a>
             <a href="comandos.html"><li>Comandos</li></a>
@@ -62,6 +62,7 @@
             <h2>Pronto! O Git foi instalado no Windows!</h2>
             <p>
                 Diferente da instalação do Git no Linux, no Windows é por meio de um arquivo executável instalador.
+                
                 Agora desfrute seus projetos com o Git!
             </p>
         </article>
