--- a/pages/configuracao.html
+++ b/pages/configuracao.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <title>Git – Configuração</title>
 </head>
+
 <body>
     <div class="focus"></div>
     <header>
@@ -20,26 +22,54 @@
     </header>
     <nav class="vertical-nav">
         <ul class="lista">
-            <a href="../index.html"><li>Controle de Versão</li></a>
-            <a href="git.html"><li>Git</li></a>
-            <a href="github.html"><li>GitHub</li></a>
+            <a href="../index.html">
+                <li>Controle de Versão</li>
+            </a>
+            <a href="git.html">
+                <li>Git</li>
+            </a>
+            <a href="github.html">
+                <li>GitHub</li>
+            </a>
             <ul class="categoria">
-                <a href="contaGitHub.html"><li>Criar Conta no GitHub</li></a>
+                <a href="contaGitHub.html">
+                    <li>Criar Conta no GitHub</li>
+                </a>
             </ul>
-            <a href="gitlab.html"><li>GitLab</li></a>
-            <a href="instalacao.html"><li>Instalação</li></a>
+            <a href="gitlab.html">
+                <li>GitLab</li>
+            </a>
+            <a href="instalacao.html">
+                <li>Instalação</li>
+            </a>
             <ul class="categoria">
-                <a href="instalacaoLinux.html"><li>Instalação no Linux</li></a>
-                <a href="instalacaoWindows.html"><li>Instalação no Windows</li></a>
+                <a href="instalacaoLinux.html">
+                    <li>Instalação no Linux</li>
+                </a>
+                <a href="instalacaoWindows.html">
+                    <li>Instalação no Windows</li>
+                </a>
             </ul>
-            <a href="configuracao.html"><li>Configuração</li></a>
-            <a href="comandos.html"><li>Comandos</li></a>
+            <a href="configuracao.html">
+                <li>Configuração</li>
+            </a>
+            <a href="comandos.html">
+                <li>Comandos</li>
+            </a>
             <ul class="categoria">
-                <a href="gitpull.html"><li>Git Pull</li></a>
-                <a href="branches.html"><li>Branches</li></a>
+                <a href="gitpull.html">
+                    <li>Git Pull</li>
+                </a>
+                <a href="branches.html">
+                    <li>Branches</li>
+                </a>
             </ul>
-            <a href="errosdecommit.html"><li>Erros no Commit</li></a>
-            <a href="exemplo.html"><li class="final">Exemplo de Utilização com Git</li></a>
+            <a href="errosdecommit.html">
+                <li>Erros no Commit</li>
+            </a>
+            <a href="exemplo.html">
+                <li class="final">Exemplo de Utilização com Git</li>
+            </a>
         </ul>
     </nav>
     <main>
@@ -49,9 +79,15 @@
                 Nesta página, você aprenderá a fazer a <b>configuração do Git</b>:
             </p>
             <ol>
-                <h2><li>Acesse o Git no Windows ou terminal do Linux.</li></h2>
+                <h2>
+                    <li>Acesse o Git no Windows ou terminal do Linux.</li>
+                </h2>
                 <p>
-                    Para que sempre que abrir o git e quiser que grave o seu <b>nome</b>:
+                    Se você estiver no linux basta abrir o terminal e digitar esses comandos, porém no windows <br> você deve abrir o menu de pesquisa e digitar Git Bash.
+                </p>
+
+                <p>
+                    Para que seja configurado o nome de usuário de sua conta git basta <br> digitar o código abaixo e colocar seu nome de usuário de sua conta no Git Hub :
                 </p>
                 <div class="codigo">
                     <code>
@@ -59,16 +95,18 @@
                     </code>
                 </div>
                 <p>
-                    Para que sempre que abrir o git e quiser que grave o seu <b>email</b>:
+                    Para que seja configurado seu email para a vinculação com a sua conta git, basta <br> digitar o código abaixo e colocar seu email utilizado em sua conta no Git Hub :
                 </p>
                 <div class="codigo">
                     <code>
                         $ git config --global user.email “seu email”
                     </code>
                 </div>
-                <h2><li>Pronto! O Git está configurado!</li></h2>
+                <h2>
+                    <li>Pronto! O Git está configurado!</li>
+                </h2>
                 <p>
-                    Para checar se a configuração está correta, digite o comando:
+                    Para checar se as configurações estão corretas, digite o comando:
                 </p>
                 <div class="codigo">
                     <code>
@@ -84,52 +122,52 @@
             <ul>
                 <li>
                     <p>
-                        <div class="codigo">
-                            <code>
+                    <div class="codigo">
+                        <code>
                                 $ git config
                             </code>
-                        </div>
-                        é a configuração do Git;
+                    </div>
+                    é o comando para acessar as configurações do Git;
                     </p>
                 </li>
                 <li>
                     <p>
-                        <div class="codigo">
-                            <code>
+                    <div class="codigo">
+                        <code>
                                 --global
                             </code>
-                        </div>
-                        é a gravação do seu nome e email;
+                    </div>
+                    é a gravação do seu nome e email;
                     </p>
                 </li>
                 <li>
                     <p>
-                        <div class="codigo">
-                            <code>
+                    <div class="codigo">
+                        <code>
                                 user.name
                             </code>
-                        </div>
-                        é o seu nome;
+                    </div>
+                    é o seu nome de úsuario de sua conta no Git Hub;
                     </p>
                 </li>
                 <li>
                     <p>
-                        <div class="codigo">
-                            <code>
+                    <div class="codigo">
+                        <code>
                                 user.email
                             </code>
-                        </div>
-                        é o seu email;
+                    </div>
+                    é o seu email utilizado em sua conta no Git Hub;
                     </p>
                 </li>
                 <li>
                     <p>
-                        <div class="codigo">
-                            <code>
+                    <div class="codigo">
+                        <code>
                                 --list
                             </code>
-                        </div>
-                        é a lista de configurações.
+                    </div>
+                    é a lista de configurações.
                     </p>
                 </li>
             </ul>
@@ -146,4 +184,5 @@
     </footer>
     <script src="../scripts/script.js"></script>
 </body>
+
 </html>
