--- a/pages/contaGitHub.html
+++ b/pages/contaGitHub.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <title>Git – Criar Conta no GitHub</title>
 </head>
+
 <body>
     <div class="focus"></div>
     <header>
@@ -20,26 +22,54 @@
     </header>
     <nav class="vertical-nav">
         <ul class="lista">
-            <a href="../index.html"><li>Controle de Versão</li></a>
-            <a href="git.html"><li>Git</li></a>
-            <a href="github.html"><li>GitHub</li></a>
+            <a href="../index.html">
+                <li>Controle de Versão</li>
+            </a>
+            <a href="git.html">
+                <li>Git</li>
+            </a>
+            <a href="github.html">
+                <li>GitHub;</li>
+            </a>
             <ul class="categoria">
-                <a href="contaGitHub.html"><li>Criar Conta no GitHub</li></a>
+                <a href="contaGitHub.html">
+                    <li>Criar Conta no GitHub</li>
+                </a>
             </ul>
-            <a href="gitlab.html"><li>GitLab</li></a>
-            <a href="instalacao.html"><li>Instalação</li></a>
+            <a href="gitlab.html">
+                <li>GitLab</li>
+            </a>
+            <a href="instalacao.html">
+                <li>Instalação</li>
+            </a>
             <ul class="categoria">
-                <a href="instalacaoLinux.html"><li>Instalação no Linux</li></a>
-                <a href="instalacaoWindows.html"><li>Instalação no Windows</li></a>
+                <a href="instalacaoLinux.html">
+                    <li>Instalação no Linux</li>
+                </a>
+                <a href="instalacaoWindows.html">
+                    <li>Instalação no Windows</li>
+                </a>
             </ul>
-            <a href="configuracao.html"><li>Configuração</li></a>
-            <a href="comandos.html"><li>Comandos</li></a>
+            <a href="configuracao.html">
+                <li>Configuração</li>
+            </a>
+            <a href="comandos.html">
+                <li>Comandos</li>
+            </a>
             <ul class="categoria">
-                <a href="gitpull.html"><li>Git Pull</li></a>
-                <a href="branches.html"><li>Branches</li></a>
+                <a href="gitpull.html">
+                    <li>Git Pull</li>
+                </a>
+                <a href="branches.html">
+                    <li>Branches</li>
+                </a>
             </ul>
-            <a href="errosdecommit.html"><li>Erros no Commit</li></a>
-            <a href="exemplo.html"><li class="final">Exemplo de Utilização com Git</li></a>
+            <a href="errosdecommit.html">
+                <li>Erros no Commit</li>
+            </a>
+            <a href="exemplo.html">
+                <li class="final">Exemplo de Utilização com Git</li>
+            </a>
         </ul>
     </nav>
     <main>
@@ -49,8 +79,13 @@
                 Nesta página, você aprenderá a criar uma <b>conta no GitHub</b> por etapas:
             </p>
             <ol>
-                <h2><li>Acesse o site do <a href="https://github.com" target="_blank" rel="noopener noreferrer">GitHub</a>.</li></h2>
-                <h2><li>Digite suas informações para fazer o cadastro.</li></h2>
+                <h2>
+                    <li>Acesse o site do <a href="https://github.com" target="_blank"
+                            rel="noopener noreferrer">GitHub</a>.</li>
+                </h2>
+                <h2>
+                    <li>Digite suas informações para fazer o cadastro.</li>
+                </h2>
                 <p>
                     Em <b>"username"</b> insira um nome para sua conta (será verificado a disponibilidade),
                     em <b>"email"</b> digite seu email de acesso,
@@ -58,21 +93,29 @@
                     menos um número, um caractere especial, letra maiúscula e minúscula.
                 </p>
                 <img src="../images/ContaGitHub/Passo1_ContaGitHub.png" alt="Passo 1 do cadastro no GitHub">
-                <h2><li>Verifique sua conta.</li></h2>
+                <h2>
+                    <li>Verifique sua conta.</li>
+                </h2>
                 <p>
-                    Será feito um teste de verificação de conta, com opção de receber emails ocasionais 
-                    de atualizações de produtos, anúncios e ofertas do GitHub. Após o teste e o preenchimento, 
+                    Será feito um teste de verificação de conta, com opção de receber emails ocasionais
+                    de atualizações de produtos, anúncios e ofertas do GitHub. Após o teste e o preenchimento,
                     clique em <b>"join a free plan"</b>.
                 </p>
                 <img src="../images/ContaGitHub/Passo2_ContaGitHub.png" alt="Passo 2 do cadastro no GitHub">
-                <h2><li>Conclua a pesquisa.</li></h2>
+                <h2>
+                    <li>Conclua a pesquisa.</li>
+                </h2>
                 <p>
-                    Será redirecioando para uma pesquisa do GitHub, perguntando sobre seus interesses no site, 
+                    Será redirecioando para uma pesquisa do GitHub, perguntando sobre seus interesses no site,
                     experiência em programação e seu objetivo em usar a plataforma.
                 </p>
-                <h2><li>Verifique a caixa de entrada de seu email.</li></h2>
+                <h2>
+                    <li>Verifique a caixa de entrada de seu email.</li>
+                </h2>
                 <p>Será enviado um email de confirmação de cadastro no GitHub</p>
-                <h2><li>Faça o login na conta do GitHub</li></h2>
+                <h2>
+                    <li>Faça o login na conta do GitHub</li>
+                </h2>
                 <p>Digite o seu <b>username</b> ou <b>email</b>, a senha e clique em <b>"sign in"</b>.</p>
                 <img src="../images/ContaGitHub/Passo3_ContaGitHub.png" alt="Passo 3 do cadastro no GitHub">
             </ol>
@@ -93,4 +136,5 @@
     </footer>
     <script src="../scripts/script.js"></script>
 </body>
+
 </html>
